--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
             <version>5.8.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.6</version>
+        </dependency>
 
     </dependencies>
 
