--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,21 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/sss?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
+    username: gxsf
+    password: Gxsf@2022
+    url: jdbc:mysql://192.168.8.236:3306/test?useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2b8
 
+#mybatis配置
+mybatis:
+  #指定Mybatis的配置文件位置
+  configLocation: classpath:/MyBatis-conf.xml
+  #实体类所在的包
+#  typeAliasesPackage:
+  #Mapper文件存放的位置
+  mapperLocations:
+    - classpath:/mapper/*.xml
+logging:
+  level:
+    org.springframework.orm.jpa: INFO
+    org.springframework.transaction: INFO
+    org.springframework.jdbc: INFO
