--- a/spring-transaction/pom.xml
+++ b/spring-transaction/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.83</version>
+        </dependency>
 
     </dependencies>
 
